--- a/ZigZag/ZigZag.DesktopUI/App.config
+++ b/ZigZag/ZigZag.DesktopUI/App.config
@@ -3,4 +3,16 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
     </startup>
+  <appSettings>
+    <add key="MapWidth" value="800"/>
+    <add key ="MapHeight" value="445"/>
+    <add key="RoadWidth" value="30"/>
+    <add key="RoadHeight" value="30"/>
+    <add key="StartPointX" value="400"/>
+    <add key="StartPointY" value="0"/>
+    <add key="MapUpdateDelay" value="700"/>
+    <add key="BallWidth" value="20"/>
+    <add key="BallHeight" value="20"/>
+    <add key="Settings.BallHeight" value="20"/>
+  </appSettings>
 </configuration>
