--- a/ZigZag/ZigZag.GameEngine/ZigZag.GameEngine.csproj
+++ b/ZigZag/ZigZag.GameEngine/ZigZag.GameEngine.csproj
@@ -29,6 +29,16 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationIcon>
+    </ApplicationIcon>
+  </PropertyGroup>
+  <PropertyGroup>
+    <SignAssembly>true</SignAssembly>
+  </PropertyGroup>
+  <PropertyGroup>
+    <AssemblyOriginatorKeyFile>keys.pfx</AssemblyOriginatorKeyFile>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -46,9 +56,17 @@
     <Compile Include="GameObjects\IBonus.cs" />
     <Compile Include="GameObjects\IGameObject.cs" />
     <Compile Include="GameObjects\IMovable.cs" />
+    <Compile Include="Statistic\GameStatistic.cs" />
     <Compile Include="Map.cs" />
     <Compile Include="Point.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="zigzag_icon.ico" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="keys.pfx" />
+    <None Include="Sign Assembly Keys.pfx" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
