--- a/ZigZag/ZigZag.DesktopUI/ZigZag.DesktopUI.csproj
+++ b/ZigZag/ZigZag.DesktopUI/ZigZag.DesktopUI.csproj
@@ -31,8 +31,18 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationIcon>zigzag_icon.ico</ApplicationIcon>
+  </PropertyGroup>
+  <PropertyGroup>
+    <SignAssembly>true</SignAssembly>
+  </PropertyGroup>
+  <PropertyGroup>
+    <AssemblyOriginatorKeyFile>desktopKeys.pfx</AssemblyOriginatorKeyFile>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -44,14 +54,60 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="GameForms\ControlInstructuinForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="GameForms\ControlInstructuinForm.Designer.cs">
+      <DependentUpon>ControlInstructuinForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="GameForms\EditUserNameForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="GameForms\EditUserNameForm.Designer.cs">
+      <DependentUpon>EditUserNameForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="GameForms\GameOverForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="GameForms\GameOverForm.Designer.cs">
+      <DependentUpon>GameOverForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="GameForms\RatingForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="GameForms\RatingForm.Designer.cs">
+      <DependentUpon>RatingForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Helpers\Enumerations.cs" />
+    <Compile Include="Helpers\Settings.cs" />
+    <Compile Include="Helpers\SoundManager.cs" />
     <Compile Include="MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="MainForm.Designer.cs">
       <DependentUpon>MainForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="Helpers\NativeMethods.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="StartForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="StartForm.Designer.cs">
+      <DependentUpon>StartForm.cs</DependentUpon>
+    </Compile>
+    <EmbeddedResource Include="GameForms\ControlInstructuinForm.resx">
+      <DependentUpon>ControlInstructuinForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="GameForms\EditUserNameForm.resx">
+      <DependentUpon>EditUserNameForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="GameForms\GameOverForm.resx">
+      <DependentUpon>GameOverForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="GameForms\RatingForm.resx">
+      <DependentUpon>RatingForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
     </EmbeddedResource>
@@ -63,7 +119,12 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="StartForm.resx">
+      <DependentUpon>StartForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <None Include="desktopKeys.pfx" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -82,6 +143,85 @@
       <Project>{1f394bee-a87a-43bf-9bd1-143ebf0c83cf}</Project>
       <Name>ZigZag.GameEngine</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\ball_skin.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\3_number.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\1_number.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\2_number.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\play_img_drag.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\play_img.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\background_texture.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\exit_img.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\exit_img_drag.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\rating.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\rating_drag.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\control.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\control_drag.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\controlkey_esc.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\controlkey_shift.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\edit_un.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\edit_un_drag.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\mouse_click.wav" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\mouse_over.wav" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\zigzag_present_img.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\closeapp_snd.wav" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Properties\typing_un.png" />
+    <Content Include="zigzag_icon.ico" />
+    <None Include="Resources\game_over.wav" />
+    <None Include="Resources\change_ball_rotation.wav" />
+    <None Include="Resources\sound_off.png" />
+    <None Include="Resources\sound_on.png" />
+    <None Include="Resources\back_to_main_menu.png" />
+    <None Include="Resources\back_to_main_menu_drag.png" />
+    <None Include="Resources\game_over_img.png" />
+    <None Include="Resources\rating_caption_img.png" />
+    <None Include="Resources\back_arrow.png" />
+    <None Include="Resources\keycontrol_img.png" />
+    <None Include="Resources\controlkey_space.png" />
+    <None Include="Resources\typing_un.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
