--- a/ZigZag/ZigZag.GameEngine.Test/ZigZag.GameEngine.Test.csproj
+++ b/ZigZag/ZigZag.GameEngine.Test/ZigZag.GameEngine.Test.csproj
@@ -59,6 +59,7 @@
     <Compile Include="GameMapTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="PointTest.cs" />
+    <Compile Include="Statistic\GameStatisticTest.cs" />
   </ItemGroup>
   <ItemGroup />
   <Choose>
