Виправлені помилки з solution building, а саме відписані збірки від файлів ключів.

--- a/ZigZag/ZigZag.ConsoleUI/ZigZag.ConsoleUI.csproj
+++ b/ZigZag/ZigZag.ConsoleUI/ZigZag.ConsoleUI.csproj
@@ -38,7 +38,8 @@
     <SignAssembly>false</SignAssembly>
   </PropertyGroup>
   <PropertyGroup>
-    <AssemblyOriginatorKeyFile>consoleKeys.pfx</AssemblyOriginatorKeyFile>
+    <AssemblyOriginatorKeyFile>
+    </AssemblyOriginatorKeyFile>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -62,7 +63,6 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
-    <None Include="consoleKeys.pfx" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="zigzag_icon.ico" />
