--- a/ZigZag/ZigZag.GameEngine/ZigZag.GameEngine.csproj
+++ b/ZigZag/ZigZag.GameEngine/ZigZag.GameEngine.csproj
@@ -34,10 +34,11 @@
     </ApplicationIcon>
   </PropertyGroup>
   <PropertyGroup>
-    <SignAssembly>true</SignAssembly>
+    <SignAssembly>false</SignAssembly>
   </PropertyGroup>
   <PropertyGroup>
-    <AssemblyOriginatorKeyFile>keys.pfx</AssemblyOriginatorKeyFile>
+    <AssemblyOriginatorKeyFile>
+    </AssemblyOriginatorKeyFile>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -63,10 +64,6 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="zigzag_icon.ico" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="keys.pfx" />
-    <None Include="Sign Assembly Keys.pfx" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
