--- a/ZigZag/ZigZag.GameEngine/ZigZag.GameEngine.csproj
+++ b/ZigZag/ZigZag.GameEngine/ZigZag.GameEngine.csproj
@@ -34,7 +34,7 @@
     </ApplicationIcon>
   </PropertyGroup>
   <PropertyGroup>
-    <SignAssembly>true</SignAssembly>
+    <SignAssembly>false</SignAssembly>
   </PropertyGroup>
   <PropertyGroup>
     <AssemblyOriginatorKeyFile>keys.pfx</AssemblyOriginatorKeyFile>
