Fixed project dependencies

--- a/ZigZag/ZigZag.ConsoleUI/ZigZag.ConsoleUI.csproj
+++ b/ZigZag/ZigZag.ConsoleUI/ZigZag.ConsoleUI.csproj
@@ -52,7 +52,7 @@
     <Reference Include="System.Xml" />
     <Reference Include="ZigZag.GameEngine, Version=1.0.0.0, Culture=neutral, PublicKeyToken=84a3c4282ebf1a60, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\ZigZag.GameEngine\bin\Release\ZigZag.GameEngine.dll</HintPath>
+      <HintPath>..\ZigZag.GameEngine\bin\Debug\ZigZag.GameEngine.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
