--- a/ZigZag/ZigZag.GameEngine.Test/ZigZag.GameEngine.Test.csproj
+++ b/ZigZag/ZigZag.GameEngine.Test/ZigZag.GameEngine.Test.csproj
@@ -37,7 +37,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="ZigZag.GameEngine">
-      <HintPath>..\ZigZag.GameEngine\bin\Release\ZigZag.GameEngine.dll</HintPath>
+      <HintPath>..\ZigZag.GameEngine\bin\Debug\ZigZag.GameEngine.dll</HintPath>
     </Reference>
   </ItemGroup>
   <Choose>
